--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://gianmarcodimauro.github.io/
+baseURL: https://gianmarcodimauro.github.io/ghhhff
 languageCode: en-us
 title: Portfolio
 
