--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,4 @@
-baseURL: www.mipiacitu.it
-languageCode: en-us
+baseURL: https://gianmarcodimauro.github.io/
 title: Portfolio
 
 # Manage languages
