--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ enableEmoji: true
 # Site parameters
 params:
   # GitHub repo URL of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/GianmarcoDiMauro/GianmarcoDiMauro.github.io
 
   # specify whether you want to write some blog posts or not
   enableBlogPost: true
