--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -2,7 +2,7 @@
 copyright: © 2020 Copyright.
 
 # Meta description for your site.  This will help the search engines to find your site.
-description: Portfolio and personal blog of Gianmarco Di Mauro, Digital Strategist per consulenze d'immagine data-driven.
+description: Portfolio e blog personale di Gianmarco Di Mauro, Digital Strategist per consulenze d'immagine e di marketing data-driven .
 
 # specify the list of custom menus that you want to show in the top navbar.
 # they will be separated by a divider from the main menus.
