--- a/data/en/sections/about.YAML
+++ b/data/en/sections/about.YAML
@@ -13,7 +13,7 @@ designation: Digital Humanist
 resume: "files/resume.pdf"
 
 # a summary about you
-summary: "Digital Humanist laureato all'università di Pisa, percorso 'Editoria digitale'. Competenze digitali e passione da umanista: svelo le storie celate sotto i vostri dati."
+summary: "Junior IT Consultant. Competenze digitali e passione da umanista: svelo le storie celate sotto i vostri dati."
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
